--- a/src/test_VideoZip/test_VideoZip/test_VideoZip.vcxproj
+++ b/src/test_VideoZip/test_VideoZip/test_VideoZip.vcxproj
@@ -72,7 +72,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>../../../include;$(IncludePath)</IncludePath>
+    <IncludePath>../../../lib/ryulib-cpp/include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
